--- a/src/HomeBlock1.css
+++ b/src/HomeBlock1.css
@@ -1,59 +1,98 @@
-@media only screen and (max-width: 1366px) {
-  @font-face {
-    font-family: myWeddingFont;
-    src: url("fonts/dancing_script.ttf");
+@font-face {
+  font-family: myWeddingFont;
+  src: url("fonts/dancing_script.ttf");
+}
+
+@font-face {
+  font-family: BaskerVilleFont;
+  src: url("fonts/Baskervville-Regular.ttf");
+}
+
+@font-face {
+  font-family: AlissonScript;
+  src: url("fonts/Allison_Script.otf");
+}
+
+.hb1-main {
+  background-position: center center;
+  background-size: cover;
+  color: white;
+  filter: grayscale(100%);
+  animation: coloring 0.5s ease-in forwards;
+  animation-delay: 4s;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+  font-family: AlissonScript;
+}
+.pink {
+  color: #e7c0b0;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: column;
+  font-family: BaskerVilleFont;
+}
+
+@keyframes coloring {
+  100% {
+    filter: none;
   }
-  .main {
+}
+
+.title {
+  font-weight: inherit;
+  animation: slide-down 2s ease-out forwards;
+  margin-bottom: 0px;
+}
+
+.wedding {
+  font-weight: inherit;
+  animation: slide-down 2s ease-out forwards;
+  margin-top: 0px;
+}
+
+.date {
+  font-weight: inherit;
+  opacity: 0;
+  animation: slide-left 2s ease-out forwards;
+  animation-delay: 2s;
+}
+
+@media only screen and (min-width: 1367px) {
+  .hb1-main {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)),
       url("./images/Home2-md.jpg");
-    background-position: center center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+    align-content: flex-start;
     justify-content: space-between;
-    color: white;
-    font-family: myWeddingFont;
-    font-size: 1.2em;
-    font-weight: 100;
-    filter: grayscale(100%);
-    animation: coloring 0.5s ease-in forwards;
-    animation-delay: 4s;
-  }
-  .top {
-    display: flex;
-    flex-direction: column;
-  }
-  .bottom {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 
-  @keyframes coloring {
-    100% {
-      filter: none;
-    }
-  }
-  .red {
-    color: rgb(170, 7, 7);
+  .top {
+    font-weight: 500;
+    font-size: 3rem;
   }
 
   .title {
-    font-weight: inherit;
-    animation: slide-down 2s ease-out forwards;
-    margin-bottom: 0px;
-    color: black;
+    margin-left: 16rem;
+    text-align: left;
+  }
+  .bottom {
+    font-weight: 500;
   }
 
   .wedding {
-    font-weight: inherit;
-    animation: slide-down 2s ease-out forwards;
-    margin-top: 0px;
-    color: black;
+    margin-left: 24rem;
+    text-align: left;
+  }
+  .date {
+    margin-left: 16rem;
+    font-size: 1.4rem;
+    text-align: left;
   }
 
   @keyframes slide-down {
@@ -66,18 +105,6 @@
       transform: translateY(0%);
       opacity: 1;
     }
-  }
-
-  .date {
-    font-weight: inherit;
-    opacity: 0;
-    animation: slide-left 2s ease-out forwards;
-    animation-delay: 2s;
-    color: black;
-  }
-
-  .green {
-    color: rgb(1, 108, 28);
   }
 
   @keyframes slide-left {
@@ -98,22 +125,19 @@
     font-family: myWeddingFont;
     src: url("fonts/dancing_script.ttf");
   }
-  .main {
+  .hb1-main {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)),
       url("./images/Home2-sm.jpg");
-    background-position: center center;
-    background-size: cover;
+
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: space-between;
-    color: white;
     font-family: myWeddingFont;
     font-size: 1.2em;
     font-weight: 100;
-    filter: grayscale(100%);
     animation: coloring 0.5s ease-in forwards;
     animation-delay: 4s;
   }
@@ -185,7 +209,7 @@
     font-family: myWeddingFont;
     src: url("fonts/dancing_script.ttf");
   }
-  .main {
+  .hb1-main {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)),
@@ -197,17 +221,13 @@
     align-content: center;
     justify-content: space-between;
     color: white;
-    font-family: myWeddingFont;
-    font-size: 1.2em;
-    font-weight: 100;
-    filter: grayscale(100%);
-    animation: coloring 0.5s ease-in forwards;
-    animation-delay: 4s;
     z-index: 1;
   }
   .top {
     display: flex;
     flex-direction: column;
+    font-size: 1.6rem;
+    font-weight: 100;
   }
   .bottom {
     display: flex;
@@ -253,6 +273,9 @@
     font-weight: inherit;
     animation: slide-left 2s ease-out forwards;
     animation-delay: 2s;
+    font-size: 0.8em;
+    font-weight: 100;
+    margin-bottom: 60px;
   }
 
   .green {
@@ -270,18 +293,4 @@
       opacity: 1;
     }
   }
-}
-
-.title {
-  font-weight: inherit;
-  color: white;
-}
-
-.wedding {
-  font-weight: inherit;
-
-  color: white;
-}
-.date {
-  color: white;
 }
