--- a/src/FoodInformationOverview.css
+++ b/src/FoodInformationOverview.css
@@ -34,6 +34,9 @@
     font-size: 48px;
     animation: fade-up 1s ease-out forwards;
   }
+  .fio-title > span {
+    color: #007a5d;
+  }
   .gi-description {
     margin: 0px 40px 0px 40px;
     color: rgb(62, 62, 62);
@@ -43,9 +46,7 @@
     animation: fade-left 1s ease-out forwards;
     /* background-color: rgba(250, 250, 250, 0.3); */
   }
-  .green {
-    color: rgb(7, 130, 0);
-  }
+
   @keyframes fade-left {
     0% {
       transform: translateX(10%);
