--- a/src/FoodInformationOverview.css
+++ b/src/FoodInformationOverview.css
@@ -1,74 +1,118 @@
+/* FONT FAMILY */
+@font-face {
+  font-family: BaskerVilleFont;
+  src: url("fonts/Baskervville-Regular.ttf");
+}
+
+@font-face {
+  font-family: AlissonScript;
+  src: url("fonts/Allison_Script.otf");
+}
+
+.fio-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(245, 245, 245);
+}
+
+.fio-header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
+    ),
+    url("./images/food.png");
+  background-size: cover;
+}
+.fio-title {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  font-family: AlissonScript;
+  animation: fade-up 1s ease-out forwards;
+  color: rgb(245, 245, 245);
+}
+.fio-title > h1 > span {
+  color: #e7c0b0;
+}
+.fio-title > svg {
+  z-index: 2;
+}
+.fio-description {
+  margin: 0px 40px 0px 40px;
+  font-family: BaskerVilleFont;
+  color: rgb(245, 245, 245);
+  animation-delay: 0.5s;
+  animation: fade-left 1s ease-out forwards;
+}
+.fio-description > span {
+  color: #e6a991;
+  font-weight: 600;
+  font-size: 28px;
+}
+.fio-title > span {
+  color: #e6a991;
+}
+
+.fio-btn-city > h2 {
+  font-family: BaskerVilleFont;
+  color: #007a5d;
+  text-align: left;
+}
+
+@keyframes fade-left {
+  0% {
+    transform: translateX(10%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-up {
+  0% {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
 @media only screen and (max-width: 599px) {
   .fio-main {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    background-color: rgb(226, 248, 225);
-  }
-
-  @font-face {
-    font-family: myWeddingFont;
-    src: url("fonts/dancing_script.ttf");
-  }
-
-  .fio-main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
     padding-bottom: 40px;
-    background-color: rgb(226, 248, 225);
-    font-family: myWeddingFont;
   }
   .fio-header {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 50vh;
-    color: white;
-    font-family: myWeddingFont;
+    padding-bottom: 40px;
   }
   .fio-title {
-    align-self: center;
-    font-family: myWeddingFont;
     margin-bottom: 1rem;
-    font-size: 48px;
-    animation: fade-up 1s ease-out forwards;
   }
-  .fio-title > span {
-    color: #007a5d;
+  .fio-title > h1 {
+    font-size: 60px;
+    font-weight: 400;
+    margin-bottom: 20px;
   }
-  .gi-description {
-    margin: 0px 40px 0px 40px;
-    color: rgb(62, 62, 62);
-    font-family: "Google Sans", "Roboto", Arial, sans-serif;
-    line-height: 160%;
-    animation-delay: 0.5s;
-    animation: fade-left 1s ease-out forwards;
-    /* background-color: rgba(250, 250, 250, 0.3); */
+  .fio-title > div > svg {
+    position: relative;
   }
-
-  @keyframes fade-left {
-    0% {
-      transform: translateX(10%);
-      opacity: 0;
-    }
-
-    100% {
-      transform: translateX(0%);
-      opacity: 1;
-    }
+  .fio-title > div {
+    height: 100px;
+    width: 100px;
   }
-
-  @keyframes fade-up {
-    0% {
-      transform: translateY(10%);
-      opacity: 0;
-    }
-
-    100% {
-      transform: translateY(0%);
-      opacity: 1;
-    }
+  .fio-btn-city > h2 {
+    margin: 36px 20px 20px 20px;
+    font-size: 32px;
   }
 }
 
